bug fixes and sample app changes

--- a/sampleapp/app/src/main/res/values/strings.xml
+++ b/sampleapp/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="otaupdate">OTAUpdate</string>
     <string name="otaupdate_background">OTAUpdate Background</string>
     <string name="otaupdate_demo">OTAUpdate_DEMO</string>
+    <string name="reset_reader">Reset Reader</string>
+    <string name="get_device_info">Get Device Info</string>
     <string-array name="country_arrays">
         <item>$1</item>
         <item>$2</item>
