Signature Panel UI Customization, BlueTooth workflow changes and auto configuration APIs for readers
Signature Panel UI Customization, BlueTooth workflow changes and auto
configuration APIs for readers.

--- a/sampleapp/app/src/main/res/values/strings.xml
+++ b/sampleapp/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
         <item>$9</item>
         <item>$10</item>
     </string-array>
+    <string name="last_transaction">Last Transaction</string>
 </resources>
